--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,14 @@ Builds/VisualStudio2010/open-ephys.vcxproj.user
 Builds/VisualStudio2010/windowState.xml
 Builds/VisualStudio2010/pipetest.bit
 
+Builds/VisualStudio2013/Plugins/*.user
+Builds/VisualStudio2013/Plugins/*.suo
+Builds/VisualStudio2013/Plugins/*.sdf
+Builds/VisualStudio2013/Plugins/*.opensdf
 Builds/VisualStudio2013/Plugins/*/*.user
+Builds/VisualStudio2013/Plugins/*/*.suo
+Builds/VisualStudio2013/Plugins/*/*.sdf
+Builds/VisualStudio2013/Plugins/*/*.opensdf
 Builds/VisualStudio2013/Plugins/*/x64
 Builds/VisualStudio2013/Plugins/*/Debug
 Builds/VisualStudio2013/Plugins/*/Release
