--- a/Source/Plugins/KWIKFormat/Makefile
+++ b/Source/Plugins/KWIKFormat/Makefile
@@ -3,6 +3,8 @@ LIBNAME := $(notdir $(CURDIR))
 OBJDIR := $(OBJDIR)/$(LIBNAME)
 TARGET := $(LIBNAME).so
 
+CXXFLAGS := $(CXXFLAGS) -I/usr/include/hdf5/serial -I/usr/local/hdf5/include
+LDFLAGS := $(LDFLAGS) -L/usr/lib/x86_64-linux-gnu/hdf5/serial -L/usr/local/hdf5/lib -lhdf5 -lhdf5_cpp
 
 SRC_DIR := ${shell find -type d -print}
 VPATH := $(SOURCE_DIRS)
