Change Rhythm node to built-in processor

--- a/Builds/Linux/Makefile
+++ b/Builds/Linux/Makefile
@@ -78,6 +78,12 @@ OBJECTS := \
   $(OBJDIR)/AudioEditor_3931be27.o \
   $(OBJDIR)/AudioNode_3db3557c.o \
   $(OBJDIR)/Channel_5cb2d4d2.o \
+  $(OBJDIR)/RHD2000Editor_54b4b441.o \
+  $(OBJDIR)/RHD2000Thread_6ad80a5e.o \
+  $(OBJDIR)/okFrontPanelDLL_18d33583.o \
+  $(OBJDIR)/rhd2000datablock_e1a710b.o \
+  $(OBJDIR)/rhd2000evalboard_7ca0f632.o \
+  $(OBJDIR)/rhd2000registers_6b59b998.o \
   $(OBJDIR)/DataBuffer_6ae4f549.o \
   $(OBJDIR)/DataThread_b2a47a13.o \
   $(OBJDIR)/ChannelSelector_c1430874.o \
@@ -288,6 +294,36 @@ $(OBJDIR)/AudioNode_3db3557c.o: ../../Source/Processors/AudioNode/AudioNode.cpp
 $(OBJDIR)/Channel_5cb2d4d2.o: ../../Source/Processors/Channel/Channel.cpp
 	-@mkdir -p $(OBJDIR)
 	@echo "Compiling Channel.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/RHD2000Editor_54b4b441.o: ../../Source/Processors/DataThreads/RhythmNode/RHD2000Editor.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling RHD2000Editor.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/RHD2000Thread_6ad80a5e.o: ../../Source/Processors/DataThreads/RhythmNode/RHD2000Thread.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling RHD2000Thread.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/okFrontPanelDLL_18d33583.o: ../../Source/Processors/DataThreads/RhythmNode/rhythm-api/okFrontPanelDLL.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling okFrontPanelDLL.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/rhd2000datablock_e1a710b.o: ../../Source/Processors/DataThreads/RhythmNode/rhythm-api/rhd2000datablock.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling rhd2000datablock.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/rhd2000evalboard_7ca0f632.o: ../../Source/Processors/DataThreads/RhythmNode/rhythm-api/rhd2000evalboard.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling rhd2000evalboard.cpp"
+	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
+
+$(OBJDIR)/rhd2000registers_6b59b998.o: ../../Source/Processors/DataThreads/RhythmNode/rhythm-api/rhd2000registers.cpp
+	-@mkdir -p $(OBJDIR)
+	@echo "Compiling rhd2000registers.cpp"
 	@$(CXX) $(CXXFLAGS) -o "$@" -c "$<"
 
 $(OBJDIR)/DataBuffer_6ae4f549.o: ../../Source/Processors/DataThreads/DataBuffer.cpp
