--- a/Builds/VisualStudio2013/open-ephys.vcxproj
+++ b/Builds/VisualStudio2013/open-ephys.vcxproj
@@ -286,6 +286,12 @@
     <ClCompile Include="..\..\Source\Processors\AudioNode\AudioEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\AudioNode\AudioNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Channel\Channel.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\RhythmNode\RHD2000Editor.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\RhythmNode\RHD2000Thread.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\RhythmNode\rhythm-api\okFrontPanelDLL.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\RhythmNode\rhythm-api\rhd2000datablock.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\RhythmNode\rhythm-api\rhd2000evalboard.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\DataThreads\RhythmNode\rhythm-api\rhd2000registers.cpp"/>
     <ClCompile Include="..\..\Source\Processors\DataThreads\DataBuffer.cpp"/>
     <ClCompile Include="..\..\Source\Processors\DataThreads\DataThread.cpp"/>
     <ClCompile Include="..\..\Source\Processors\Editors\ChannelSelector.cpp"/>
@@ -1489,6 +1495,12 @@
     <ClInclude Include="..\..\Source\Processors\AudioNode\AudioEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\AudioNode\AudioNode.h"/>
     <ClInclude Include="..\..\Source\Processors\Channel\Channel.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\RhythmNode\RHD2000Editor.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\RhythmNode\RHD2000Thread.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\RhythmNode\rhythm-api\okFrontPanelDLL.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\RhythmNode\rhythm-api\rhd2000datablock.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\RhythmNode\rhythm-api\rhd2000evalboard.h"/>
+    <ClInclude Include="..\..\Source\Processors\DataThreads\RhythmNode\rhythm-api\rhd2000registers.h"/>
     <ClInclude Include="..\..\Source\Processors\DataThreads\DataBuffer.h"/>
     <ClInclude Include="..\..\Source\Processors\DataThreads\DataThread.h"/>
     <ClInclude Include="..\..\Source\Processors\Editors\ChannelSelector.h"/>
