Fix some compilation errors on Mac

--- a/Source/Plugins/KWIKFormat/Makefile
+++ b/Source/Plugins/KWIKFormat/Makefile
@@ -6,7 +6,7 @@ TARGET := $(LIBNAME).so
 CXXFLAGS := $(CXXFLAGS) -I/usr/include/hdf5/serial -I/usr/local/hdf5/include
 LDFLAGS := $(LDFLAGS) -L/usr/lib/x86_64-linux-gnu/hdf5/serial -L/usr/local/hdf5/lib -lhdf5 -lhdf5_cpp
 
-SRC_DIR := ${shell find -type d -print}
+SRC_DIR := ${shell find ./ -type d -print}
 VPATH := $(SOURCE_DIRS)
 
 SRC := $(foreach sdir,$(SRC_DIR),$(wildcard $(sdir)/*.cpp))
