--- a/Builds/MacOSX/Makefile.plugins
+++ b/Builds/MacOSX/Makefile.plugins
@@ -39,12 +39,12 @@ ifeq ($(CONFIG),Release)
     TARGET_ARCH := -march=native
   endif
 
-  CPPFLAGS := $(DEPFLAGS) -D "LINUX=1" -D "NDEBUG=1" -D "OEPLUGIN" -D "JUCER_LINUX_MAKE_7346DA2A=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I /usr/include -I /usr/include/freetype2 -I $(CURDIR)../../JuceLibraryCode -I $(CURDIR)../../JuceLibraryCode/modules 
-  CFLAGS += $(CPPFLAGS) $(TARGET_ARCH) -O3 -g -pg -std=c++0x -fPIC -rdynamic
+  CPPFLAGS := $(DEPFLAGS) -D "NDEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I $(CURDIR)../../JuceLibraryCode -I $(CURDIR)../../JuceLibraryCode/modules 
+  CFLAGS += $(CPPFLAGS) $(TARGET_ARCH) -O3 -g -std=c++0x -fPIC 
   CXXFLAGS += $(CFLAGS)
-  LDFLAGS += $(TARGET_ARCH) -L$(BINDIR) -L$(LIBDIR) -fvisibility=hidden -L/usr/X11R6/lib/ -lGL -lX11 -lXext -lXinerama -lasound -ldl -lfreetype -lpthread -lrt -pg -ldl -lXext -lGLU -fPIC -rdynamic
+  LDFLAGS += $(TARGET_ARCH) -L$(BINDIR) -L$(LIBDIR) -fvisibility=hidden -ldl -lpthread -ldl -fPIC -rdynamic -dynamiclib -undefined dynamic_lookup
   LDDEPS1 :=
-  RESFLAGS :=  -D "LINUX=1" -D "NDEBUG=1" -D "OEPLUGIN" -D "JUCER_LINUX_MAKE_7346DA2A=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I /usr/include -I /usr/include/freetype2 -I $(CURDIR)../../JuceLibraryCode -I $(CURDIR)../../JuceLibraryCode/modules 
+  RESFLAGS := -D "NDEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I /usr/include -I /usr/include/freetype2 -I $(CURDIR)../../JuceLibraryCode -I $(CURDIR)../../JuceLibraryCode/modules 
   CLEANCMD = rm -rf $(OUTDIR)/* $(OBJDIR)
 endif
 
