Update new headers for Mac and Linux plugin builds

--- a/Builds/MacOSX/Makefile.plugins
+++ b/Builds/MacOSX/Makefile.plugins
@@ -20,12 +20,12 @@ ifeq ($(CONFIG),Debug)
     TARGET_ARCH := -march=native
   endif
 
-  CPPFLAGS := $(DEPFLAGS) -D "DEBUG=1" -D "_DEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I $(CURDIR)../../JuceLibraryCode -I $(CURDIR)../../JuceLibraryCode/modules
+  CPPFLAGS := $(DEPFLAGS) -D "DEBUG=1" -D "_DEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I $(CURDIR)/../../Source/Plugins/Headers
   CFLAGS += $(CPPFLAGS) $(TARGET_ARCH) -g -ggdb -O3 -g -std=c++0x -fPIC
   CXXFLAGS += $(CFLAGS)
   LDFLAGS += $(TARGET_ARCH) -L$(BINDIR) -L$(LIBDIR) -ldl -lpthread -ldl -fPIC -rdynamic -dynamiclib -undefined dynamic_lookup
   LDDEPS :=
-  RESFLAGS := -D "DEBUG=1" -D "_DEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I $(CURDIR)../../JuceLibraryCode -I $(CURDIR)../../JuceLibraryCode/modules 
+  RESFLAGS := -D "DEBUG=1" -D "_DEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I $(CURDIR)/../../Source/Plugins/Headers
   CLEANCMD = rm -rf $(OUTDIR)/* $(OBJDIR)
 endif
 
@@ -39,12 +39,12 @@ ifeq ($(CONFIG),Release)
     TARGET_ARCH := -march=native
   endif
 
-  CPPFLAGS := $(DEPFLAGS) -D "NDEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I $(CURDIR)../../JuceLibraryCode -I $(CURDIR)../../JuceLibraryCode/modules 
+  CPPFLAGS := $(DEPFLAGS) -D "NDEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I $(CURDIR)/../../Source/Plugins/Headers
   CFLAGS += $(CPPFLAGS) $(TARGET_ARCH) -O3 -g -std=c++0x -fPIC 
   CXXFLAGS += $(CFLAGS)
   LDFLAGS += $(TARGET_ARCH) -L$(BINDIR) -L$(LIBDIR) -fvisibility=hidden -ldl -lpthread -ldl -fPIC -rdynamic -dynamiclib -undefined dynamic_lookup
   LDDEPS1 :=
-  RESFLAGS := -D "NDEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I /usr/include -I /usr/include/freetype2 -I $(CURDIR)../../JuceLibraryCode -I $(CURDIR)../../JuceLibraryCode/modules 
+  RESFLAGS := -D "NDEBUG=1" -D "OEPLUGIN" -D "JUCER_XCODE_MAC_F6D2F4CF=1" -D "JUCE_APP_VERSION=0.3.5" -D "JUCE_APP_VERSION_HEX=0x305" -I /usr/include -I /usr/include/freetype2 -I $(CURDIR)/../../Source/Plugins/Headers
   CLEANCMD = rm -rf $(OUTDIR)/* $(OBJDIR)
 endif
 
